# python-basics-tutorial

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .vale.ini  CHANGELOG.rst  CNAME  README.rst  pyproject.toml
.github/workflows/: ci.yml  pages.yml  zizmor.yml
docs/: 404.rst  apps.rst  changelog.rst  conf.py  constraints.txt  contribute.rst  dataclasses.rst  editors.rst  explore.rst  functions.rst  index.rst  input.rst  install.rst  intro.rst  requirements.txt  style.rst  variables-expressions.rst
docs/_static/css/: cusy.css
docs/appendix/: checks.rst  encodings.rst  example_mod.py  example_mod2.py  glossary.rst  index.rst  my_script.py  regex.rst
docs/control-flow/: boolean.rst  conditional.rst  exceptions.py  exceptions.rst  index.rst  loops.rst  with.rst  with_alt.py
docs/control-flows/: boolean.rst  exceptions.py  exceptions.rst  functions.rst  if-elif-else.rst  index.rst  loops.rst  myFile1.py  with.py  with.rst  with_alt.py
docs/document/: arithmetic.py  autodoc-examples.rst  badges.rst  code-blocks.rst  directives.rst  docstrings-example.rst  docstrings.rst  doctest.rst  extensions.rst  index.rst  intersphinx.rst  main.py  main.py.orig  placeholder.rst  rest.rst  shot-scraper.rst  start.rst  storyboard.yml  test.rst
docs/document/sphinx/: convert.rst  directives.rst  docstrings.rst  extensions.rst  index.rst  intersphinx.rst  main.py  main.py.orig  placeholder.rst  rest.rst  start.rst  test.rst  ui-elements.rst
docs/document/sphinx/uml/: class-diagram.rst  index.rst
docs/document/uml/: activity-diagram.rst  class-diagram.rst  index.rst  sequence-diagram.rst  use-case-diagram.rst
docs/functions/: decorators.rst  index.rst  lambda.rst  params.rst  variables.rst
docs/libs/: .gitlab-ci.yml  batteries.rst  binary-extensions.rst  cibuildwheel.rst  distribution.rst  gitlab.rst  glossary.rst  index.rst  install.rst  packages-programmes.rst  packages.rst  pyproject.toml  upload-install.rst
docs/libs/.github/workflows/: build_wheels.yml
docs/libs/dataprep/: pyproject.toml  setup.py
docs/libs/dataprep/docs/: conf.py  index.rst  reference.rst
docs/libs/dataprep/src/dataprep/: mean.py
docs/libs/mypack/: pyproject.toml
docs/libs/mypack/src/mypack/: __init__.py
docs/libs/templating/: advanced.rst  cruft.rst  features.rst  index.rst  install.rst  templates.rst
docs/logging/: development.ini  examples.ipynb  index.rst
docs/modules/: index.rst  wc.py  wcargparse.py  wcargv.py  wcargv_stdin.py
docs/modules-packages/: index.rst
docs/myapp/: hello.py  pyproject.toml
docs/oop/: circle.py  circle_cm.py  classes.rst  coherent.rst  dataclasses.rst  form.py  form_ns.py  form_pr.py  index.rst  inheritance.rst  methods.rst  namespaces.rst  private.rst  property.rst  summary.rst  types.rst  variables.rst
docs/oop/design/: best_promo.py  books.json  caller.py  command.rst  decorator.rst  factory.rst  forms.py  index.rst  promos.py  solid.rst  strategy.py  strategy.rst
docs/packs/: apps.rst  binary-extensions.rst  cibuildwheel.rst  distribution.rst  gitlab.rst  index.rst  publish.rst  pyproject.toml  upload-install.rst
docs/packs/.github/workflows/: build_wheels.yml
docs/packs/dataprep/: README.rst  pyproject.toml
docs/packs/dataprep/src/dataprep/: cymean.pyx
docs/packs/myapp/: pyproject.toml
docs/packs/myapp/src/myapp/: __init__.py
docs/packs/mypack/: pyproject.toml
docs/packs/templating/: advanced.rst  cruft.rst  features.rst  install.rst  templates.rst
docs/save-data/: books.csv  create-data-from-csv.rst  create-data.rst  create-db.rst  create_data.py  delete-data.rst  delete_data.py  elementtree_example.py  files-directories.rst  files.rst  filesystem.rst  index.rst  minidom_example.py  modules.rst  normalise.py  normalise.rst  pickle.rst  pickle_example.py  pickle_example2.py  psycopg.py  psycopg.rst  query-data.rst  query-normalised.rst  query_data.py  query_normalised.py  sqlite.rst  test_sqlite.py  update-data.rst  update_data.py  xml.rst
docs/save-data/sqlite/: create-data.rst  create_data.py  create_data_from_csv.py  create_db.py  delete-data.rst  delete_data.py  index.rst  normalise.py  normalise.rst  query-data.rst  query-normalised.rst  query_data.py  query_normalised.py  test_sqlite.py  update-data.rst  update_data.py
docs/test/: arithmetic.py  bdd.rst  ci.yaml  coverage.rst  doctest.rst  glossary.rst  hypothesis.rst  index.rst  mock.rst  pytest.rst  sqlite.rst  tdd.rst  test_arithmetic.py  test_emails.py  test_emails_2.py  test_hypothesis.py  test_mock.py  test_pytest.py  tests.yaml  tox.ini  tox.rst  unittest.rst  unittest2.rst
docs/test/behave/: example.rst  index.rst
docs/test/coverage/: codecov.rst  index.rst  opencoverage.rst
docs/test/pytest/: builtin-fixtures.rst  ci.yaml  command-line-options.rst  config.rst  coverage.rst  debug.rst  examples.rst  fixtures.rst  functions.rst  index.rst  markers.rst  params.rst  plugins.rst  test_one.py  test_pytest.py  test_two.py  testsuite.rst
docs/types/: dicts.rst  files.rst  index.rst  lists.rst  none.rst  numbers.rst  sets.rst  strings.rst  tuples.rst
docs/types/numbers/: bool.rst  complex.rst  index.rst
docs/types/sequences-sets/: index.rst  lists.rst  sets.rst  tuples.rst
docs/types/strings/: encodings.rst  index.rst  input.rst  operators-functions.rst  print.rst
docs/types/strings/built-in-modules/: index.rst  re.rst  regex.rst  string.rst
