[project]
name = "python-basics-tutorial"
version = "24.2.0"
authors = [
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Training materials for our Python basics course: https://cusy.io/en/seminars"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = []

[dependency-groups]
docs = [
    "furo",
    "ipython",
    "ipywidgets",
    "nbsphinx",
    "sphinxext.opengraph", # matplotlib is required for social cards
    "matplotlib",
    "sphinx_copybutton",
    "sphinx-inline-tabs",
    "sphinxcontrib.plantuml",
    "sphinxcontrib-svg2pdfconverter",
    "sphinx-lint",
    "pygments-pytest",
]

dev = [
    { include-group = "docs" },
    "pre-commit",
    "codespell",
    "vale"
]

[project.urls]
"Homepage" = "https://github.com/veit/python-basics-tutorial/"
"Bug Tracker" = "https://github.com/veit/python-basics-tutorial/issues"

[tool.codespell]
ignore-words-list = "ist, symbl, allo"
