[project]
name = "python-basics-tutorial"
version = "24.2.0"
authors = [
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Training materials for our Python basics course: https://cusy.io/en/seminars"
readme = "README.rst"
License-Expression = "BSD-3-Clause"
License-File = [ "LICENSE" ]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[dependency-groups]
docs = [
    "furo",
    "ipython",
    "ipywidgets",
    "matplotlib", # matplotlib is required for social cards
    "nbsphinx",
    "pygments-pytest",
    "sphinx-inline-tabs",
    "sphinx-lint",
    "sphinx-notfound-page",
    "sphinx-sitemap",
    "sphinx_copybutton",
    "sphinxcontrib-svg2pdfconverter",
    "sphinxcontrib.plantuml",
    "sphinxext.opengraph",
]

dev = [
    { include-group = "docs" },
    "pre-commit",
    "codespell",
    "vale"
]

[project.urls]
"Homepage" = "https://github.com/veit/python-basics-tutorial/"
"Bug Tracker" = "https://github.com/veit/python-basics-tutorial/issues"

[tool.codespell]
ignore-words-list = "ist, symbl, allo"
