[project]
name = "python-basics-tutorial"
version = "24.2.0"
description = "Training materials for our Python basics course: https://cusy.io/en/seminars"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "Veit Schiele", email = "veit@cusy.io" },
]
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [  ]

urls."Bug Tracker" = "https://github.com/veit/python-basics-tutorial/issues"
urls."Homepage" = "https://github.com/veit/python-basics-tutorial/"

[dependency-groups]
dev = [
  "codespell",
  "pre-commit",
  "vale",
  { include-group = "docs" },
]
docs = [
  "furo",
  "ipython",
  "ipywidgets",
  "matplotlib",                     # matplotlib is required for social cards
  "nbsphinx",
  "pygments-pytest",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-lint",
  "sphinx-notfound-page",
  "sphinx-sitemap",
  "sphinxcontrib-plantuml",
  "sphinxcontrib-svg2pdfconverter",
  "sphinxext-opengraph",
]

[tool.codespell]
ignore-words-list = "ist, symbl, allo"
