[build-system]
build-backend = "setuptools.build_meta"
requires = [ "cython", "setuptools>=77" ]

[project]
name = "dataprep"
version = "0.1.0"
description = "A small dataprep package"
readme = "README.rst"
authors = [
  { name = "Veit Schiele", email = "veit@cusy.io" },
]
requires-python = ">=3.9"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "cython",
  "pandas",
]

urls."Bug Tracker" = "https://github.com/veit/dataprep/issues"
urls."Homepage" = "https://github.com/veit/dataprep"
License-Expression = "BSD-3-Clause"
License-File = [ "LICENSE" ]

[dependency-groups]
dev = [
  "pre-commit",
  { include-group = "docs" },
  { include-group = "tests" },
]
docs = [
  "furo",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinxext-opengraph",
]
tests = [
  "coverage[toml]",
  "pytest>=6",
]
