[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Veit Schiele", email = "veit@cusy.io" },
]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [  ]

scripts.myapp = "myapp:main"
